# scormhost

./: .gitignore  CHANGELOG.md  LICENSE  README.md  alembic.ini  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_users.py
examples/cloud/: README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  seed.py
examples/cloud/course/: course.yaml  lxpack.config.json  package.json
examples/cloud/course/interactions/phishing-lab/: index.html
examples/cloud/course/lessons/: welcome.md
examples/cloud/courses/branching-demo/: course.yaml  lxpack.config.json  package.json
examples/cloud/courses/branching-demo/assessments/: final.yaml
examples/cloud/courses/branching-demo/interactions/choose-path/: index.html
examples/cloud/courses/branching-demo/lessons/: intro.md  wrap-up.md
examples/cloud/courses/cmi5-demo/: README.md  course.yaml  lxpack.config.json
examples/cloud/courses/cmi5-demo/interactions/phishing-lab/: index.html
examples/cloud/courses/cmi5-demo/lessons/: welcome.md
examples/cloud/courses/xapi-awareness/: README.md  course.yaml  lxpack.config.json  package.json
examples/cloud/courses/xapi-awareness/assessments/: final.yaml
examples/cloud/courses/xapi-awareness/lessons/: welcome.md
src/scormhost/: __init__.py  app.py  config.py  host.py  manifest.py  migrate.py  packages.py  paths.py  router.py  storage.py  templates.py
src/scormhost/alembic/: env.py
src/scormhost/auth/: __init__.py  cookies.py  dependencies.py  guest.py  router.py  schemas.py  security.py  service.py  urls.py
src/scormhost/db/: __init__.py  models.py  session.py
src/scormhost/static/: scorm12-api.js  scorm2004-api.js
tests/: conftest.py  test_app.py  test_auth.py  test_manifest.py  test_security.py  test_urls.py
tests/fixtures/minimal-scorm12/: imsmanifest.xml  index.html
(+1 files in other folders)
