[project]
name = "scormhost"
version = "0.1.0"
description = "Host SCORM 1.2 and 2004 packages on FastAPI — deployable to FastAPI Cloud"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "scormhost contributors" }]
keywords = ["fastapi", "scorm", "lms", "elearning", "scormhost"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Education",
]
dependencies = [
  "alembic>=1.14.0",
  "email-validator>=2.0.0",
  "fastapi>=0.115.0",
  "bcrypt>=4.0.0",
  "PyJWT>=2.8.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = ["httpx>=0.27.0", "pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[project.urls]
Homepage = "https://github.com/eddiethedean/scormhost"
Documentation = "https://github.com/eddiethedean/scormhost#readme"
Repository = "https://github.com/eddiethedean/scormhost"
Issues = "https://github.com/eddiethedean/scormhost/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scormhost"]

[tool.fastapi]
entrypoint = "main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
